--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to Floof!</h1>
-<p>We love puppies and are here to help you find your perfect companion</p>
+<p>We love puppies and are here to help you find your perfect fur-ever friend</p>
