--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="field">
@@ -27,8 +27,10 @@
   </div>
 
   <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
+    <% @locations.each do |option| %>
+    <%= form.label :location, option %>
+    <%= form.radio_button :location, option %>
+    <% end %>
   </div>
 
   <div class="field">
@@ -48,7 +50,7 @@
 
   <div class="field">
     <%= form.label :category_id %>
-    <%= form.text_field :category_id %>
+    <%= form.select :category_id, @categories.map {|c| [c.name, c.id]} %>
   </div>
 
   <div class="actions">
