--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -38,7 +38,7 @@
     <%= form.number_field :fee %>
   </div>
 
-  <div class="field">
+ <!-- > <div class="field">
     <%= form.label :available %>
     <%= form.check_box :available %>
   </div>
@@ -47,6 +47,8 @@
     <%= form.label :user_id %>
     <%= form.text_field :user_id %>
   </div>
+
+-->
 
   <div class="field">
     <%= form.label :category_id %>
