--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Name</th>
       <th>Description</th>
       <th>Breed</th>
       <th>Location</th>
@@ -20,7 +20,7 @@
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
-        <td><%= listing.title %></td>
+        <td><%= listing.name %></td>
         <td><%= listing.description %></td>
         <td><%= listing.breed %></td>
         <td><%= listing.location %></td>
