--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,12 @@
 
+<%= link_to "🏠", root_path %> | 
+<%= link_to "Listings", listings_path %>
+
+<span style="float: right">
 <% if user_signed_in? %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
 <% else %>
-<%= link_to "Register", new_user_registration_path %>
+<%= link_to "Register", new_user_registration_path %> | 
 <%= link_to "Log in", new_user_session_path %>
 <% end %>
+</span>
