--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -38,21 +38,14 @@
     <%= form.number_field :fee %>
   </div>
 
-<!--  <div class="field">
-    <%= form.label :available %>
-    <%= form.check_box :available %>
-  </div>
-
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  -->
-
-  <div class="field">
-    <%= form.label :category_id, %>
+    <%= form.label :category_id %>
     <%= form.select :category_id, @categories.map {|c| [c.name, c.id]} %>
+  </div>
+
+  <div class="field">
+    <%= form.label :picture %>
+    <%= form.file_field :picture, accept: "img/png,img/jpg,image/jpeg" %>
   </div>
 
   <div class="actions">
