--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,5 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+<div>
+<% if @listing.picture.attached? %>
+  <%= image_tag @listing.picture, alt: @listing.name %>
+<% else %>
+  <%= image_tag "https://placedog.net/400/500?r", alt: @listing.name %>
+<% end %>
+</div>
+
 <p>
   <strong>Name:</strong>
   <%= @listing.title %>
@@ -39,6 +47,7 @@
   <strong>Category:</strong>
   <%= @listing.category_id %>
 </p>
-
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
+<% if current_user.id == @listing.user_id %>
+  <%= link_to 'Edit', edit_listing_path(@listing) %>
+<% end %>
 <%= link_to 'Back', listings_path %>
