--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @listing.title %>
+  <%= @listing.name %>
 </p>
 
 <p>
@@ -47,7 +47,7 @@
   <strong>Category:</strong>
   <%= @listing.category_id %>
 </p>
-<% if current_user.id == @listing.user_id %>
+<% if current_user && current_user.id == @listing.user_id %>
   <%= link_to 'Edit', edit_listing_path(@listing) %>
 <% end %>
 <%= link_to 'Back', listings_path %>
