--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 
-<%= link_to "🏠", root_path, class: "button" %> 
+<%= link_to "Home", root_path, class: "button" %> 
 <%= link_to "Listings", listings_path, class: "button" %>
 
 <span style="float: right">
