--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -28,10 +28,10 @@
         <td><%= listing.available %></td>
         <td><%= listing.user_id %></td>
         <td><%= listing.category_id %></td>
-        <td><%= link_to 'Show', listing %></td>
+        <td><%= link_to 'View', listing, class: "button"%></td>
         <% if current_user && current_user.id == listing.user_id %>
-          <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-          <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_listing_path(listing), class: "button" %></td>
+          <td><%= link_to 'Destroy', listing, class: "button", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<%= link_to 'Post A New Listing', new_listing_path, class: "button button-primary" %>
