--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,37 @@
-<h1>Welcome to Floof!</h1>
-<p>We love puppies and are here to help you find your perfect fur-ever friend</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <%# <link rel="icon" type="image/x-icon" href="img/global-img/favicon.ico"> %>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%# <link rel="stylesheet" href="style/global/globalstyle.css">
+    <link rel="stylesheet" href="style/home-style.css"> %>
+    <%# <title>Lily Nöel</title> %>
+
+<%# <style>  
+body  
+{  
+background-image:url("https://1.bp.blogspot.com/-sTxAHAxirGM/WVbAe2098nI/AAAAAAABENs/_I5sYMYgLOUzaIE7FfF4qdGX-hoAkq9SgCLcBGAs/s1600/Blog_20170624_113552.jpg");  
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+width: 100%
+}
+</style>   %>
+</head>
+
+<body>
+
+    <%# <!--header-->
+    <div class="header">
+   <img src="img/global-img/name.png" alt="Lily Nöel" id="name">
+    </div> %>
+    
+
+<h1>Welcome to <img class="logo" src="/assets/text.PNG", width="140"></h1>
+<p>We love floofs and are here to help you find your perfect fur-ever friend</p>
+
+</body>
+</html>
