--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -1,2 +1,2 @@
-<h1> Congratulations on adopting a puppy! </h1>
-<p> your family has grown by four legs ♥️ </p>
+<h1>Adopted!</h1>
+<p> Your family has grown by four legs ♥️ </p>
