--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,8 +1,8 @@
 
-<%= link_to "Home", root_path, class: "button" %> 
-<%= link_to "Listings", listings_path, class: "button" %>
 
 <span style="float: right">
+<%= link_to "Home", root_path, class: "button" %> 
+<%= link_to "Listings", listings_path, class: "button" %>
 <% if user_signed_in? %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "button button-primary" %>
 <% else %>
@@ -10,3 +10,8 @@
 <%= link_to "Log in", new_user_session_path, class: "button button-primary" %>
 <% end %>
 </span>
+
+
+<img class="logo" src="/assets/logo.PNG", width="250">
+
+
