--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', listing: @listing %>
 
-<%= link_to 'Show', @listing %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'View Listing', @listing, class: "button button-primary" %>
+<%= link_to 'Back', listings_path, class: "button button-primary" %>
