--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,10 @@
 
 
+
+<div>
+
+<img ="logo" src="/assets/logo.PNG", width="250">
+
 <span style="float: right">
 <%= link_to "Home", root_path, class: "button" %> 
 <%= link_to "Listings", listings_path, class: "button" %>
@@ -11,7 +16,4 @@
 <% end %>
 </span>
 
-
-<img class="logo" src="/assets/logo.PNG", width="250">
-
-
+</div>
