--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,9 @@
 <br>
 <br>
 
-<h1>Welcome to <img class="logo", src="/assets/text.PNG", width="140"></h1>
+<h1>Welcome to <img src="https://i.ibb.co/10tqSrZ/text.png" alt="text" width="140"></h1>
 <p>We love floofs and are here to help you find your perfect fur-ever friend</p>
+
+
 
 
