--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,7 +3,8 @@
 
 <div>
 
-<img ="logo" src="/assets/logo.PNG", width="250">
+<img src="https://i.ibb.co/yhypPQ4/logo.png" alt="logo" width="250">
+
 
 <span style="float: right">
 <%= link_to "Home", root_path, class: "button" %> 
