--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,22 @@
-<br>
-<br>
-<br>
-<br>
 
-
+<img src="https://i.ibb.co/WnZDJxZ/puppy.png"  alt="puppy" width="900">
 
 
 <h1>Welcome to <img src="https://i.ibb.co/10tqSrZ/text.png" alt="text" width="140"></h1>
-<p>We love floofs and are here to help you find your perfect fur-ever friend</p>
+<p>We love floofs and are here to help you adopt your perfect fur-ever friend.</p>
+
+<%= link_to 'Post A New Listing', new_listing_path, class: "button button-primary" %>
 
 
-
+<div id= copyright>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center>
+<img src="https://i.ibb.co/0CGxz6b/floof-copyright.png  alt="puppy" width="110">
+<br>
+<b>Floof.</b> © 2022 Lily Noël.
+</center>
+</div>
