--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,14 +1,15 @@
 
-<div>
+<div id="nav">
 
-
-<img src="https://i.ibb.co/yhypPQ4/logo.png" alt="logo" width="250">
+<img src="https://i.ibb.co/Gsyr05p/logo-1.png" alt="logo" width="250">
 
 
 <span style="float: right">
 <%= link_to "Home", root_path, class: "button" %> 
-<%= link_to "Listings", listings_path, class: "button" %>
+<%= link_to "All Listings", listings_path, class: "button" %>
 <% if user_signed_in? %>
+<%= link_to "Your Adoptions", orders_bought_path, class: "button" %> 
+<%= link_to "Your Listings", orders_sold_path, class: "button" %> 
 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "button button-primary" %>
 <% else %>
 <%= link_to "Register", new_user_registration_path, class: "button button-primary" %>
