--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -38,14 +38,10 @@
   <%= @listing.breed %>
 </p>
 
-<%# 
-  <strong>Location:</strong>
-  <%= @listing.location %>
-
 
 <p>
   <strong>Fee:</strong>
-  <%= @listing.fee %>
+  <%= number_to_currency(@listing.fee) %>
 </p>
 
 <p>
@@ -60,7 +56,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @listing.category_id %>
+  <%= @listing.category.name %>
 </p>
 <% if current_user && current_user.id == @listing.user_id %>
   <%= link_to 'Edit', edit_listing_path(@listing), class: "button button-primary" %>
