--- a/app/views/orders/sold.html.erb
+++ b/app/views/orders/sold.html.erb
@@ -1,2 +1,36 @@
-<h1>Orders#sold</h1>
-<p>Find me in app/views/orders/sold.html.erb</p>
+<h1>Your Listings</h1>
+
+<p id="notice"><%= notice %></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Breed</th>
+      <th>Fee</th>
+      <th>Listed By</th>
+      <th>Category</th>
+      <th colspan="3"></th> 
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @sold_items.each do |item| %>
+      <tr>      
+        <td><%= item.listing.name %></td>
+        <td><%= item.listing.description %></td>
+        <td><%= item.listing.breed %></td>
+        <td><%= number_to_currency(item.listing.fee) %></td>
+        <td><%= item.buyer.username %></td>
+        <td><%= item.listing.category.name %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br>
+<%= link_to 'Post A New Listing', new_listing_path, class: "button button-primary" %>
+
+
+
+
