update success page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,6 @@
 <center>
 <img src="https://i.ibb.co/0CGxz6b/floof-copyright.png  alt="puppy" width="110">
 <br>
-<b>Floof.</b> © 2022 Lily Noël.
+<b>Floof. © 2022 Lily Noël.
 </center>
 </div>
