--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<img src="https://i.ibb.co/WnZDJxZ/puppy.png"  alt="puppy" width="900">
+<img src="https://static.wixstatic.com/media/88104f_ac3d736c7c3e4502972755fc9642ed95~mv2.png"  alt="puppy" width="1000">
 
 
 <h1>Welcome to <img src="https://i.ibb.co/10tqSrZ/text.png" alt="text" width="140"></h1>
@@ -13,10 +13,9 @@
 <br>
 <br>
 <br>
-<br>
 <center>
 <img src="https://i.ibb.co/0CGxz6b/floof-copyright.png  alt="puppy" width="110">
 <br>
-<b>Floof. © 2022 Lily Noël.
+<b>Floof.</b> © 2022 Lily Noël.
 </center>
 </div>
